--- a/client/dashboard.html
+++ b/client/dashboard.html
@@ -17,6 +17,7 @@
 
     <div class="profile-nav">
       <span id="usernameDisplay">👤 Guest</span>
+      <img id="favoriteLogo" src="" alt="Team Logo" />
       <select id="favoriteTeam">
         <option value="" disabled selected>★ Favorite Team</option>
         <option value="Liverpool">Liverpool</option>
@@ -68,7 +69,7 @@
     </section>
   </main>
 
-  <footer class="footer"></footer>
+  <footer class="footer">
     <p>© 2025 Pranish Uprety</p>
   </footer>
 
