--- a/client/resetPassword.html
+++ b/client/resetPassword.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="auth-container">
         <h1>Reset Your Password</h1>
         <form id="resetPasswordForm">
             <div class="form-group">
