--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="auth-container">
         <h1>Welcome to SoccerHub!</h1>
         <p>Your ultimate destination for soccer news and updates.</p>
         <div class="button-group">
