--- a/client/login.html
+++ b/client/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="auth-container">
         <h1>Login to SoccerHub</h1>
         <form id="loginForm">
             <div class="form-group">
