--- a/client/register.html
+++ b/client/register.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="auth-container">
         <h1>Register for SoccerHub</h1>
         <form id="registerForm">
             <div class="form-group">
